[package]
name = "blackbody"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "Blockchain node for consensus compression algorithm."
license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
rand = "0.8.3"