[package]
name = "blackbody"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "blockchain node for consensus compression algorithm."

readme = "README.md"

keywords = ["blockchain", "blackbody", "algorithm"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
otoodb = { path = "../otoodb" }

# Generate Randomness
rand = "0.8.4"
rand_chacha = "0.3.1"

# CLI
clap = "2.33.3"

# NET
actix-web = "3.3.2"
crossbeam = "0.8.1"