[package]
name = "blackbody"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "blockchain node for consensus compression algorithm."

readme = "README.md"

keywords = ["blockchain", "blackbody", "algorithm"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
hdkey = { path = "../hdkey", default-features = false, features = ["security"] }
otoodb = { path = "../otoodb" }

# Generate Randomness
rand = "0.8.4"
rand_chacha = "0.3.1"

# Crypto
hmac = "0.11.0"
sha3 = "0.9.1"
blake3 = "1.0.0"
aes-gcm = "0.9.3"
vep = "1.0.1"
hex = "0.4.3"

# CLI
clap = "2.33.3"
console = "0.14.1"
unicode-normalization = "0.1.19"

# NET
actix-web = "3.3.2"
serde_json = "1.0.66"
crossbeam = "0.8.1"

# etc
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
optionee = "0.1.0"