[package]
name = "blackhole"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "The Blackbody distributed deterministic data compressor/decompressor."
license = "LGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wormhole = { path = "../wormhole" }