[package]
name = "blackhole"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "the blackbody distributed deterministic data compressor/decompressor."

readme = "README.md"

keywords = ["blockchain", "blackbody", "compressor", "decompressor"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
wormhole = { path = "../wormhole" }