[package]
name = "gravity"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "The Blackbody toolchain installer."
license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
