[package]
name = "hdkey"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "hd key generator for blackbody."

readme = "README.md"

keywords = ["blockchain", "blackbody", "crypto", "wallet"]
categories = ["cryptography"]

license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
security = []

[dependencies]
tiny-bip39 = "0.8.0"
blake3 = "1.0.0"
sha3 = "0.9.1"
rand = "0.8.4"
hex = "0.4.3"
aes-gcm = "0.9.3"
vep = "0.1.0"

bs58 = "0.4.0"
unicode-normalization = "0.1.19"

ed25519-dalek-bip32-black = "0.1.2"

utils-results = "5.1.1"
