[package]
name = "itq"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "Infinite Thread Queue."
license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }