[package]
name = "itq"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "Infinite Thread Queue."

readme = "README.md"

keywords = ["infinite", "thread", "queue"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }