[package]
name = "otoodb"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "One to One Set Database."

readme = "README.md"

keywords = ["blockchain", "blackbody", "database"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", features = ["fs"] }