[package]
name = "utils"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/blackbody-foundation/blackbody"
repository = "https://github.com/blackbody-foundation/blackbody"

description = "blackbody utils."

readme = "README.md"

keywords = ["blockchain", "blackbody", "utils"]
categories = ["cryptography", "compression"]

license = "LGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fs = []

[dependencies]
utils-results = { version = "5.2.1" }

serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
primitive-types = "0.10.1"
crossbeam = "0.8.1"
sha3 = "0.9.1"