[package]
name = "wormhole"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
description = "Reading and writing .cccs file."
license = "LGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
